# lexa

./: .drone.yml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  rustfmt.toml
.alpine/: lexa-agent.rc  lexa-cluster.rc  lexa-server.rc
.debian/: postinst  postinstall-pak  postremove-pak  preinst
.systemd/: lexa.service
agent/: lexa.service
agent/common/: config.go
agent/p2p/: noise.go
api/: router.go
api/mounts/: common.go  root.go
api/routes/: root.go
cluster/: lexa.service
cluster/api/mounts/: common.go
cluster/api/routes/: root.go
cluster/common/: config.go  proxy.go
cluster/resolver/: resolver.go
command/: agent.go  cluster.go  relay.go  root.go  server.go  version.go
common/: config.go  dataset.go  logger.go  pem.go
ipfs/: ipfs.go
resolver/: resolver.go
server/: lexa.service
server/api/: router.go
server/api/mounts/: root.go
server/api/routes/: common.go  root.go
server/common/: config.go
server/dataset/: dataset.go
server/middleware/: contextmiddleware.go
server/p2p/: noise.go
server/resolver/: resolver.go
shared/: logger.go  pem.go  util.go
shared/messages/: agentinfo.go
src/: main.rs
src/commands/: mod.rs  state.rs
src/commands/server/: config.rs  dns.rs  mod.rs  server.rs
src/commands/server/rocket/: mod.rs
src/commands/server/rocket/routes/: mod.rs
src/data/: containers_full.rs  data.rs  mod.rs
